--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
 </div>
 </div></div></div></section><section class="d-flex align-items-center" id="contacto"><div class="container open-sans" id="contacto-grid"><form class="text-center white p-3 rounded-lg open-sans z-depth-2" action="#!">
 <p class="h4 mb-4">Contacto</p>
-<input type="text" id="contact-name" class="form-control mb-4" placeholder="Nombre">
-<input type="email" id="contact-email" class="form-control mb-4" placeholder="E-mail">
-<label>Asunto</label>
-<select class="browser-default custom-select mb-4">
-<option value="" disabled>Elegir una opcion</option>
-<option value="1" selected>Consulta</option>
+<input type="text" id="contact-name" class="form-control" placeholder="Nombre">
+<div id="mensaje1" class="errores">Por favor, complete este campo</div>
+<input type="email" id="contact-email" class="form-control mt-4" placeholder="E-mail">
+<div id="mensaje2" class="errores">El Mail no es valido</div>
+<label class="mt-3">Asunto</label>
+<select class="browser-default custom-select mb-4" id="selector">
+<option value="" disabled selected>Elegir una opcion</option>
+<option value="1" >Consulta</option>
 <option value="2">Trabajo a realizar</option>
 </select>
 <div class="form-group">
 <textarea class="form-control rounded-0" id="contact-message" rows="3" placeholder="Mensaje"></textarea>
+<div id="mensaje3" class="errores">Por favor, complete este campo</div>
 </div>
 <div class="custom-control custom-checkbox mb-4">
 <input type="checkbox" class="custom-control-input" id="defaultContactFormCopy">
